--- a/app/src/main/res/layout-v23/activity_main_menu.xml
+++ b/app/src/main/res/layout-v23/activity_main_menu.xml
@@ -4,21 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainMenu"
-    tools:ignore="UnusedAttribute">
+    android:foreground="@drawable/fully_editable_vector_illustration_seamless_pattern_isolated_guitars_7714_159"
+    tools:context=".MainMenu">
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="298dp"
-        android:layout_height="95dp"
+        android:layout_width="153dp"
+        android:layout_height="80dp"
         android:layout_marginStart="128dp"
         android:layout_marginLeft="128dp"
         android:layout_marginTop="276dp"
         android:layout_marginEnd="112dp"
         android:layout_marginRight="112dp"
         android:layout_marginBottom="44dp"
-        android:foreground="@drawable/tips"
-        app:backgroundTint="@android:color/transparent"
+        android:text="Советы"
         app:layout_constraintBottom_toTopOf="@+id/button10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,69 +25,60 @@
 
     <Button
         android:id="@+id/button10"
-        android:layout_width="298dp"
-        android:layout_height="95dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginLeft="56dp"
+        android:layout_width="153dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginLeft="128dp"
         android:layout_marginTop="400dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginRight="39dp"
         android:layout_marginBottom="118dp"
-        android:foreground="@drawable/reference"
         android:hapticFeedbackEnabled="false"
-        app:backgroundTint="@android:color/transparent"
+        android:text="Справка"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="298dp"
-        android:layout_height="95dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
+        android:layout_width="153dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginLeft="128dp"
         android:layout_marginTop="44dp"
         android:layout_marginBottom="32dp"
-        android:foreground="@drawable/beaker"
-        app:backgroundTint="@android:color/transparent"
+        android:text="Мензура"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintVertical_bias="0.846" />
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="298dp"
-        android:layout_height="95dp"
+        android:layout_width="153dp"
+        android:layout_height="80dp"
         android:layout_marginStart="150dp"
         android:layout_marginLeft="150dp"
         android:layout_marginTop="55dp"
         android:layout_marginEnd="167dp"
         android:layout_marginRight="167dp"
         android:layout_marginBottom="596dp"
-        android:foreground="@drawable/tune"
-        app:backgroundTint="@android:color/transparent"
+        android:text="Тюнер"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.463"
+        app:layout_constraintHorizontal_bias="0.285"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.564" />
+        app:layout_constraintVertical_bias="0.962" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="298dp"
-        android:layout_height="95dp"
+        android:layout_width="153dp"
+        android:layout_height="80dp"
         android:layout_marginStart="128dp"
         android:layout_marginLeft="128dp"
         android:layout_marginTop="156dp"
         android:layout_marginEnd="112dp"
         android:layout_marginRight="112dp"
         android:layout_marginBottom="40dp"
-        android:foreground="@drawable/play"
-        app:backgroundTint="@android:color/transparent"
+        android:text="Играть"
         app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
