--- a/app/src/main/res/layout/activity_menzura.xml
+++ b/app/src/main/res/layout/activity_menzura.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fon6"
     tools:context=".Menzura">
 
     <TextView
@@ -96,12 +97,13 @@
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Назад"
+        android:layout_width="160dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
+        android:foreground="@drawable/back"
+        app:backgroundTint="@android:color/transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -112,6 +114,8 @@
         android:layout_marginTop="92dp"
         android:layout_marginEnd="288dp"
         android:layout_marginRight="288dp"
+        android:background="#b6ff16"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button7" />
 
@@ -122,6 +126,8 @@
         android:layout_marginTop="156dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:background="#b6ff16"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -132,6 +138,8 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="168dp"
         android:layout_marginRight="168dp"
+        android:background="#b6ff16"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -142,6 +150,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="168dp"
         android:layout_marginRight="168dp"
+        android:background="#b6ff16"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView41" />
 
@@ -152,6 +162,8 @@
         android:layout_marginEnd="120dp"
         android:layout_marginRight="120dp"
         android:layout_marginBottom="232dp"
+        android:background="#b6ff16"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
