--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -4,22 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fon3"
     tools:context=".Rating">
 
     <TextView
         android:id="@+id/textView46"
-        android:layout_width="119dp"
-        android:layout_height="45dp"
+        android:layout_width="88dp"
+        android:layout_height="42dp"
         android:layout_marginStart="149dp"
         android:layout_marginLeft="149dp"
         android:layout_marginTop="88dp"
         android:layout_marginEnd="149dp"
         android:layout_marginRight="149dp"
         android:layout_marginBottom="22dp"
+        android:background="@color/white"
+        android:fontFamily="sans-serif-black"
         android:gravity="center_horizontal"
-        android:text="Время"
+        android:text="Time"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/textView44"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +31,7 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="343dp"
+        android:layout_width="116dp"
         android:layout_height="47dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
@@ -35,15 +39,22 @@
         android:layout_marginEnd="36dp"
         android:layout_marginRight="36dp"
         android:layout_marginBottom="17dp"
+        android:background="#FFFFFF"
+        android:fontFamily="sans-serif-black"
         android:gravity="center_horizontal"
-        android:text="Результат"
+        android:text="Result"
         android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/black"
         android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView46"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView44"
@@ -53,25 +64,28 @@
         android:layout_marginLeft="172dp"
         android:layout_marginEnd="174dp"
         android:layout_marginRight="174dp"
-        android:layout_marginBottom="520dp"
+        android:layout_marginBottom="532dp"
+        android:background="@color/white"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="212dp"
+        android:layout_height="27dp"
         android:layout_marginStart="102dp"
         android:layout_marginLeft="102dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="96dp"
         android:layout_marginRight="96dp"
         android:layout_marginBottom="11dp"
+        android:background="#FFFFFF"
         android:ems="10"
-        android:hint="Ваше Имя"
+        android:hint="Your Name"
         android:inputType="textPersonName"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/button15"
@@ -86,7 +100,11 @@
         android:layout_marginEnd="96dp"
         android:layout_marginRight="96dp"
         android:layout_marginBottom="380dp"
-        android:text="Далее"
+        android:fontFamily="sans-serif-black"
+        android:text="Rating"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -99,11 +117,15 @@
         android:layout_marginEnd="31dp"
         android:layout_marginRight="31dp"
         android:layout_marginBottom="380dp"
-        android:text="Меню"
+        android:fontFamily="sans-serif-black"
+        android:text="Menu"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/black"
         android:textIsSelectable="false"
+        android:textSize="18sp"
+        app:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button13"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
