--- a/app/src/main/res/layout/activity_sprav.xml
+++ b/app/src/main/res/layout/activity_sprav.xml
@@ -4,16 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fon2"
     tools:context=".Sprav">
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Назад"
+        android:layout_width="160dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
+        android:foreground="@drawable/back"
+        app:backgroundTint="@android:color/transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,8 +27,11 @@
         android:layout_marginEnd="133dp"
         android:layout_marginRight="133dp"
         android:text="Скачать Русскую Раскладку"
+        android:textColor="@color/black"
+        app:backgroundTint="#00CED1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="#FFFFFF" />
 
     <Button
         android:id="@+id/button12"
@@ -36,6 +41,8 @@
         android:layout_marginEnd="132dp"
         android:layout_marginRight="132dp"
         android:text="Скачать Английскую Раскладку"
+        android:textColor="@color/black"
+        app:backgroundTint="#00CED1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,7 +54,7 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="256dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/imageView3"
