--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -9,15 +9,15 @@
 
     <TextView
         android:id="@+id/textView46"
-        android:layout_width="88dp"
-        android:layout_height="42dp"
+        android:layout_width="90dp"
+        android:layout_height="40dp"
         android:layout_marginStart="149dp"
         android:layout_marginLeft="149dp"
         android:layout_marginTop="88dp"
         android:layout_marginEnd="149dp"
         android:layout_marginRight="149dp"
         android:layout_marginBottom="22dp"
-        android:background="@color/white"
+        android:background="@drawable/bac"
         android:fontFamily="sans-serif-black"
         android:gravity="center_horizontal"
         android:text="Time"
@@ -26,8 +26,10 @@
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/textView44"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.659" />
 
     <TextView
         android:id="@+id/textView5"
@@ -35,11 +37,10 @@
         android:layout_height="47dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="36dp"
         android:layout_marginRight="36dp"
-        android:layout_marginBottom="17dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/bac"
         android:fontFamily="sans-serif-black"
         android:gravity="center_horizontal"
         android:text="Result"
@@ -49,83 +50,78 @@
         android:textColor="@color/black"
         android:textSize="36sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView46"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView44"
-        android:layout_width="65dp"
-        android:layout_height="56dp"
+        android:layout_width="51dp"
+        android:layout_height="47dp"
         android:layout_marginStart="172dp"
         android:layout_marginLeft="172dp"
         android:layout_marginEnd="174dp"
         android:layout_marginRight="174dp"
-        android:layout_marginBottom="532dp"
-        android:background="@color/white"
+        android:layout_marginBottom="508dp"
+        android:background="@drawable/bac"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="212dp"
-        android:layout_height="27dp"
+        style="@android:style/Theme.Black"
+        android:layout_width="275dp"
+        android:layout_height="63dp"
         android:layout_marginStart="102dp"
         android:layout_marginLeft="102dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="96dp"
         android:layout_marginRight="96dp"
-        android:layout_marginBottom="11dp"
-        android:background="#FFFFFF"
+        android:background="#daffff"
         android:ems="10"
         android:hint="Your Name"
         android:inputType="textPersonName"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/button15"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.548"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView44" />
 
     <Button
         android:id="@+id/button13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="96dp"
-        android:layout_marginRight="96dp"
-        android:layout_marginBottom="380dp"
+        android:layout_width="150dp"
+        android:layout_height="70dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginRight="36dp"
+        android:layout_marginBottom="292dp"
         android:fontFamily="sans-serif-black"
         android:text="Rating"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="#daffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/button15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginLeft="108dp"
-        android:layout_marginEnd="31dp"
-        android:layout_marginRight="31dp"
-        android:layout_marginBottom="380dp"
+        android:layout_width="150dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginBottom="292dp"
         android:fontFamily="sans-serif-black"
         android:text="Menu"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/black"
         android:textIsSelectable="false"
         android:textSize="18sp"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="#daffff"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button13"
-        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
