--- a/app/src/main/res/layout/activity_fynfyrie.xml
+++ b/app/src/main/res/layout/activity_fynfyrie.xml
@@ -15,54 +15,40 @@
         android:layout_marginLeft="114dp"
         android:layout_marginEnd="114dp"
         android:layout_marginRight="114dp"
-        android:layout_marginBottom="96dp"
-        android:background="#00d6ff"
+        android:layout_marginBottom="176dp"
+        android:background="#eaeed2"
         android:fontFamily="sans-serif-black"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView33"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="184dp"
-        android:layout_marginRight="184dp"
-        android:background="#00d6ff"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button14"
-        android:layout_width="160dp"
-        android:layout_height="62dp"
+        android:layout_width="206dp"
+        android:layout_height="83dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="4dp"
-        android:foreground="@drawable/back"
+        android:foreground="@drawable/back3"
         app:backgroundTint="@android:color/transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="393dp"
-        android:layout_height="69dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="#00d6ff"
+        android:layout_width="375dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="#b6ce16"
         android:fontFamily="sans-serif-black"
         android:gravity="center_horizontal"
         android:text="Just Play any tunes on the guitar and You will get useful Tips!"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
