--- a/app/src/main/res/layout/activity_main_game.xml
+++ b/app/src/main/res/layout/activity_main_game.xml
@@ -9,12 +9,12 @@
 
     <TextView
         android:id="@+id/textView45"
-        android:layout_width="43dp"
-        android:layout_height="46dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="184dp"
         android:layout_marginLeft="184dp"
         android:layout_marginTop="88dp"
-        android:background="#8ada1a"
+        android:background="#34ab34"
         android:gravity="center_horizontal"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -31,8 +31,8 @@
         android:layout_marginTop="99dp"
         android:layout_marginEnd="97dp"
         android:layout_marginRight="97dp"
-        android:layout_marginBottom="324dp"
-        android:background="#ff9600"
+        android:layout_marginBottom="484dp"
+        android:background="#5eb2f6"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="@color/black"
@@ -50,7 +50,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="4dp"
-        android:foreground="@drawable/back"
+        android:foreground="@drawable/back2"
         app:backgroundTint="@android:color/transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -60,7 +60,7 @@
         android:layout_width="183dp"
         android:layout_height="47dp"
         android:layout_marginTop="160dp"
-        android:background="#8ada1a"
+        android:background="#34ab34"
         android:gravity="center_horizontal"
         android:textColor="@color/black"
         android:textSize="24sp"
@@ -70,15 +70,15 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="174dp"
-        android:layout_height="82dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginLeft="116dp"
-        android:layout_marginTop="28dp"
-        android:text="Всё!"
+        android:layout_width="164dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="176dp"
+        android:text="Done!"
         android:textAlignment="center"
         android:textSize="30sp"
-        app:backgroundTint="#007eff"
+        app:backgroundTint="#34ab34"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         tools:ignore="RtlCompat" />
