--- a/app/src/main/res/layout/activity_main_game.xml
+++ b/app/src/main/res/layout/activity_main_game.xml
@@ -11,14 +11,13 @@
         android:id="@+id/textView45"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="184dp"
-        android:layout_marginLeft="184dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="100dp"
         android:background="#34ab34"
         android:gravity="center_horizontal"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,10 +27,8 @@
         android:layout_height="38dp"
         android:layout_marginStart="101dp"
         android:layout_marginLeft="101dp"
-        android:layout_marginTop="99dp"
         android:layout_marginEnd="97dp"
         android:layout_marginRight="97dp"
-        android:layout_marginBottom="484dp"
         android:background="#5eb2f6"
         android:ems="10"
         android:inputType="textPersonName"
@@ -40,8 +37,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.107" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.383" />
 
     <Button
         android:id="@+id/button4"
@@ -59,7 +56,7 @@
         android:id="@+id/textView3"
         android:layout_width="183dp"
         android:layout_height="47dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="184dp"
         android:background="#34ab34"
         android:gravity="center_horizontal"
         android:textColor="@color/black"
@@ -72,15 +69,15 @@
         android:id="@+id/button5"
         android:layout_width="164dp"
         android:layout_height="74dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="176dp"
         android:text="Done!"
         android:textAlignment="center"
         android:textSize="30sp"
         app:backgroundTint="#34ab34"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlCompat" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
